<resources>
    <string name="app_name">Equities</string>
    <string name="main">Main</string>
    <string name="stockmarket">Stock Market</string>
    <string name="app_comp">AHV Mobile Solutions</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_main">Main</string>
    <string name="title_search">Search</string>
    <string name="title_markets">Markets</string>
    <string name="website">Website</string>
    <string name="markets">World Markets</string>
    <string name="title_analysis">Analysis</string>
    <string name="title_news">News</string>
    <string name="title_video">Video</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_analysis">Information</string>
    <string name="action_favorite">Favorite</string>
    <string name="day_color">Day Time</string>
    <string name="night_color">Night Time</string>
    <string name="top5stocks">Stocks</string>
    <string name="top5cryptos">Cryptocurrencies</string>
    <string name="bottom5stocks">Stocks</string>
    <string name="bottom5cryptos">Cryptocurrencies</string>
    <string name="leaders">Leaders</string>
    <string name="losers">Losers</string>
    <string name="volume">Volume</string>
    <string name="dow_jones">Dow Jones</string>
    <string name="s_p">S&amp;P 500</string>
    <string name="bovespa">Brazil Bovespa</string>
    <string name="btc_market_cap">Bitcoin</string>
    <string name="crypto_cap">Cryptocurrency Cap</string>
    <string name="altcoin_cap">Alt Coins</string>
    <string name="stock_volume_leaders">Stock Market Kings</string>
    <string name="crypto_volume_leaders">Cryptocurrency Kings</string>
    <string name="stock_market_gainers">Stock Market Leaders</string>
    <string name="crypto_gainers">Cryptocurrency Leaders</string>
    <string name="cryptogainers">Crypto Leaders</string>
    <string name="stock_market_losers">Stock Market Losers</string>
    <string name="crypto_losers">Cryptocurrency Losers</string>
    <string name="cryptolosers">Crypto Losers</string>
    <string name="cryptokings">Crypto Kings</string>
    <string name="crypto_proof_of_work">Proof of Work</string>
    <string name="crypto_proof_of_stake">Proof of Stake</string>
    <string name="crypto_news">Crypto News</string>
    <string name="stock_losers">Stock Losers</string>
    <string name="stock_gainers">Stock Leaders</string>
    <string name="stock_kings">Stock Kings</string>
    <string name="stock_news">Stock News</string>
    <string name="whattype">Select what you are interested in?</string>
    <string name="thanks">Thank you for installing Equities</string>
    <string name="commodities">Commodities</string>
    <string name="forex">Forex</string>
    <string name="bonds">Bonds</string>
    <string name="etf">ETF</string>
    <string name="start">Start Application</string>
    <string name="crypto_wisdom">Crypto Wisdom</string>
    <string name="stock_wisdom">Stock Wisdom</string>
 <string name="select_all">Select All</string>
    <string name="change_methods">You can change this anytime in the app by touching the search button then settings</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="price">Price</string>
    <string name="range_52">52 Week Range</string>
    <string name="supply">Coins</string>
    <string name="shares">Shares</string>
    <string name="title_buy">Exchanges</string>
    <string name="crypto">Cryptocurrency</string>
    <string name="title_gratitude">Gratitude</string>
    <string name="title_exchanges">Exchanges</string>
    <string name="market_kings">Kings</string>
    <string name="news">News</string>
    <string name="saved">Favorites</string>
    <string name="title_about">About</string>
    <string name="ico">ICO\'s</string>
    <string name="ipo">IPO\'s</string>
    <string name="market_cap">Market Cap</string>
    <string name="default_font" translatable="false">sans-serif-light</string>
    <string name="stocktwits">Social Media</string>
    <string name="compare">Chart</string>
    <string name="change">Change</string>
    <string name="masternodes">Masternodes</string>
    <string name="quote1">"It's how you deal with failure that determines how you achieve success." \n\n-David Feherty</string>
    <string name="quote2">"An investment in knowledge pays the best interest." \n\n-Benjamin Franklin</string>
    <string name="quote3">"I will tell you the secret to getting rich on Wall Street. You try to be greedy when others are fearful. And you try to be fearful when others are greedy." \n\n-Warren Buffett</string>
    <string name="quote4">"A nickel ain't worth a dime anymore." \n\n-Yogi Berra</string>
    <string name="quote5">"It’s not the employer who pays the wages. Employers only handle the money. It’s the customer who pays the wages." \n\n-Henry Ford</string>
    <string name="quote6">"You can only become truly accomplished at something you love. Don’t make money your goal. Instead, pursue the things you love doing, and then do them so well that people can’t take their eyes off you." \n\n-Maya Angelou</string>
    <string name="quote7">"How many millionaires do you know who have become wealthy by investing in savings accounts? I rest my case." \n\n-Robert G. Allen</string>
    <string name="quote8">"Let him who would enjoy a good future waste none of his present." \n\n-Roger Babson</string>
    <string name="quote9">"A journey of a thousand miles must begin with a single step." \n\n-Lao Tzu</string>
    <string name="quote10">"It takes as much energy to wish as it does to plan." \n\n-Eleanor Roosevelt</string>
    <string name="quote11">"If we command our wealth, we shall be rich and free. If our wealth commands us, we are poor indeed." \n\n-Edmund Burke</string>
    <string name="quote12">"Inflation is taxation without legislation. \n\n-Milton Freidman"</string>
    <string name="quote13">"A fool is wise in his eyes." \n\n-King Solomon</string>
    <string name="quote14">"Brass shines as fair to the ignorant as gold to the goldsmiths" \n\n-Elizabeth I</string>
    <string name="quote15">"There is little that can withstand a man who can conquer himself" \n\n-Louis XIV</string>
    <string name="quote16">"All money is a matter of belief" \n\n-Adam Smith</string>
    <string name="quote17">"A man in debt is so far a slave." \n\n-Ralph Waldo Emerson</string>
    <string name="quote18">"Financial peace isn't the acquisition of stuff. It's learning to live on less than you make, so you can give money back and have money to invest. You can't win until you do this." \n\n-Dave Ramsey</string>
    <string name="quote19">"No man ever steps in the same river twice, for it's not the same river and he's not the same man." \n\n-Heraclitus</string>
    <string name="quote20">"Luck is what happens when preparation meets opportunity" \n\n-Senaca</string>
    <string name="quote21">"It had long since come to my attention that people of accomplishment rarely sat back and let things happen to them. They went out and happened to things." \n\n-Leonardo da Vinci"</string>
    <string name="quote22">"Good judgment comes from experience, and a lot of that comes from bad judgment." \n\n-Will Rogers</string>
    <string name="quote23">"Know how to listen and you will profit even from those who talk badly." \n\n-Plutarch</string>
    <string name="quote24">"Do not seek to follow in the footsteps of the men of old; seek what they sought." \n\n-Basho</string>
    <string name="quote25">"Too often we... enjoy the comfort of opinion without the discomfort of thought." \n\n-John F. Kennedy</string>
    <string name="quote26">"I think the internet is going to be one of the major forces for reducing the role of government. The one thing that’s missing but that will soon be developed, is a reliable e-cash." \n\n-Milton Friedman</string>
    <string name="quote27">"The future of money is digital currency." \n\n-Bill Gates</string>
    <string name="quote28">"It’s a hell of a lot harder for a few hundred thousand people to watch 7 1/2 billion. But what do you think happens when 7 1/2 billion of us stare back?" \n\n-Andreas M. Antonopoulos</string>
    <string name="quote29">"Everything will be tokenized and connected by a blockchain one day" \n\n-Fred Ehrsam</string>
    <string name="quote30">"Anything that can conceive of as a supply chain, blockchain can vastly improve its efficiency- it doesn’t matter if its people, numbers, data, money." \n\n–Ginni Rometty, CEO IBM</string>
    <string name="quote31">"You cannot un-invent this technology. You cannot turn this omelette back into eggs." \n\n-Andreas Antonopoulos</string>
    <string name="quote32">"Control of a currency is one of the most powerful tools a government wields; ask anybody in Ireland, Portugal, Greece, or Cyprus who lived through those countries’ recent financial crises." \n\n-Paul Vigna</string>
    <string name="quote33">"Bitcoin is a remarkable cryptographic achievement and the ability to create something that is not duplicable in the digital world has enormous value" \n\n-Eric Schmidt, Former CEO of Google</string>
    <string name="quote34">"40 years from now, blockchain and all that followed from it will figure more prominently in that story than will bitcoin." \n\n-Larry Summers, US Former Treasury Secretary</string>
    <string name="quote35">"I do think Bitcoin is the first that has the potential to do something like change the world." \n\n-Peter Thiel, Co-Founder of Paypal.</string>
    <string name="quote36">"We need blockchain technology." \n\n-Vladimir Putin</string>
    <string name="quote37">"Bitcoin is a technological tour de force." \n\n-Bill Gates</string>
    <string name="quote38">"This app is pretty cool." \n\n-You, hopefully</string>
    <string name="quote39">"It’s money 2.0, a huge huge huge deal." \n\n-Chamath Palihapitiya</string>
    <string name="quote40">"Mobile was Internet 2.0. It changed everything. Crypto is Internet 3.0." \n\n-Gil Penchina</string>
    <string name="quote41">"Bitcoin may be the TCP/IP of money." \n\n-Paul Buchheit</string>
    <string name="quote42">"You should be taking this technology as seriously as you should have been taking the development of the Internet in the early 1990’s." \n\n-Blythe Masters</string>
    <string name="quote43">"I do not fear computers. I fear lack of them." \n\n-Isaac Asimov</string>
    <string name="quote44">"Virtual currencies may hold long-term promise, particularly if the innovations promote a faster, more secure and more efficient payment system." \n\n-Ben Bernanke</string>
    <string name="quote45">"Any sufficiently advanced technology is equivalent to magic." \n\n-Arthur C. Clarke </string>
    <string name="quote46">"For a successful technology, reality must take precedence over public relations, for Nature cannot be fooled." \n\n-Richard P. Feynman</string>
    <string name="quote47">"We see bitcoin as potentially the greatest social network of all." \n\n-Tyler Winklevoss</string>
    <string name="quote48">"The very same things that they said about the internet in the early '90s. It is a haven for pedophiles, terrorists, drug dealers, and criminals." \n\n-Andreas M. Antonopoulos</string>
    <string name="quote49">"How high can bitcoin go? The real question is how low can the dollar go?" \n\n-Patrick M. Byrne</string>
    <string name="quote50">"Bitcoin is a way to have programmable scarcity. The blockchain is the data structure that records the transfer of scarce objects." \n\n-Balaji Srinivasan</string>
</resources>