<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/gradient"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/aequity_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Tron"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold" />
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">



            <TextView
                android:id="@+id/aequity_symbol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TRX"
                android:textColor="#ffffff"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/aequity_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/crypto"
                android:textColor="#ffffff" />
        </LinearLayout>


        <TextView
            android:id="@+id/aequity_price"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="$2.46"
            android:textColor="#ffffff"
            android:textSize="36sp" />
    </TableRow>


            <TextView
                android:id="@+id/supply"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Supply"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/aequity_supply"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="99,000,000,000"
                android:textColor="#ffffff" />




    <android.support.design.widget.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabGravity="fill"
        app:tabIndicatorColor="@color/green_color_text"
        app:tabMode="fixed"
        app:tabSelectedTextColor="@color/green_color_text"
        app:tabTextColor="#ffffff " />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/price"
            android:textColor="#ffffff"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/volume"
            android:textColor="#ffffff"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/date"
            android:textColor="#ffffff"
            android:textStyle="bold" />
    </TableRow>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/historical_listview"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"></android.support.v7.widget.RecyclerView>
</LinearLayout>